<?xml version="1.0" encoding="utf-8"?>

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.omarmurcia.perimetrosyareas.MainActivity"
    android:orientation="vertical"
    android:background="@drawable/images">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15"
        android:gravity="center"
        android:text="@string/titulo"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:text="@string/inic"
                android:gravity="top"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rCuadro"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/cuadro"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <RadioButton
                    android:id="@+id/rCirculo"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/circulo"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <RadioButton
                    android:id="@+id/rTriangulo"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/triangulo"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

                <RadioButton
                    android:id="@+id/rCubo"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/cubo"
                    android:textSize="20sp"
                    android:textStyle="bold"/>

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1.2"
                android:layout_height="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingreso"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textStyle="bold"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:id="@+id/lLa">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lado"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eLado"
                    android:inputType="number"
                    android:gravity="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:id="@+id/lRad">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eRadio"
                    android:inputType="number"
                    android:gravity="center"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:id="@+id/lBas">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/base"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eBase"
                    android:inputType="number"
                    android:gravity="center"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:id="@+id/lAlt">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/altura"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/eAltura"
                    android:inputType="number"
                    android:gravity="center"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.35"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.19"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resul"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.27"
            android:gravity="center"
            android:id="@+id/lAr">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/area"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/eArea"
                android:textIsSelectable="true"
                android:gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.27"
            android:gravity="center"
            android:id="@+id/lPer">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perimetro"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/ePerimetro"
                android:textIsSelectable="true"
                android:gravity="center"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.27"
            android:gravity="center"
            android:id="@+id/lVol">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cub"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/eCub"
                android:textIsSelectable="true"
                android:gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular"
            android:id="@+id/bCalcular"
            android:background="@color/yellow"
            android:onClick="Calcular"/>
    </LinearLayout>

</LinearLayout>
